2003-12-11  David Gravereaux <davygrvy@pobox.com>

	win/winMain.c: Backed-out yesterdays change.  Reverted to 1.15 for
	two reasons.  1) problem is best addressed in Tcl's DllMain() and
	2) needs a MinGW custom assembly implimentation as it doesn't
	understand SEH syntax.

2003-12-10  David Gravereaux <davygrvy@pobox.com>

	* win/winMain.c (WishPanic) : placed ExitProcess() in a __try block
	(SEH) to catch any exceptions that might happen.  As Tcl will call
	Tcl_Finalize from its DllMain due to the unload from ExitProcess()
	unloading Tcl, and if Tcl_Panic had gotten called in an __except
	block handling an exception, this avoid the possibility of not
	being able to exit from the stack being a mess.  Falls to
	TerminateProcess() in the __except case.

	Removed the #ifdef _MSC_VER around DebugBreak as that function
	exists in kernel32.dll and is not compiler dependent.  I'd prefer
	to use 'if (IsDebuggerPresent()) DebugBreak();' but
	IsDebuggerPresent() isn't available in all kernel32.dll modules
	for all versions of windows.

2003-12-10  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/CrtImgType.3: Fixed line-transposition error found by Eric
	Raymond. [Bug 857159]

2003-12-03  Don Porter	<dgp@users.sourceforge.net>

	* generic/tk.h:		Bumped patch level to 8.4.5.1 to distinguish
	* unix/configure.in:	CVS snapshots from the 8.4.5 release.
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf (2.13)
	* win/configure:

2003-12-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkMenu.c (MenuVarProc): prevent this from triggering
	while interp is being destroyed.

2x03-11-21  Benjamin Riefenstahl  <Benjamin.Riefenstahl@epost.de>

	*** 8.4.5 TAGGED FOR RELEASE ***

	* macosx/tkMacOSXKeyboard.c: Add PowerBook keycode 0x34 as
    	<Return>. (Merge from trunk)

2003-11-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* changes: updated for 8.4.5 release

2003-11-17  Jeff Hobbs  <jeffh@ActiveState.com>
